--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@ button:active {
 .tree-row {
   display: flex;
   margin: 0.8em 0;
+  max-height: 10vh;
 }
 
 .one .tree-node {
@@ -54,8 +55,7 @@ button:active {
 }
 
 .one .node {
-  height: 8rem !important;
-  width: 8rem !important;
+  height: 100%;
 }
 
 .two .tree-node {
@@ -63,8 +63,7 @@ button:active {
 }
 
 .two .node {
-  height: 7rem !important;
-  width: 7rem !important;
+  height: 100%;
 }
 
 .three .tree-node {
@@ -72,8 +71,7 @@ button:active {
 }
 
 .three .node {
-  height: 6rem !important;
-  width: 6rem !important;
+  height: 100%;
 }
 
 .four .tree-node {
@@ -81,8 +79,7 @@ button:active {
 }
 
 .four .node {
-  height: 5rem !important;
-  width: 5rem !important;
+  height: 100%;
 }
 
 .five .tree-node {
@@ -90,12 +87,15 @@ button:active {
 }
 
 .five .node {
-  height: 4rem !important;
-  width: 4rem !important;
+  height: 100%;
 }
 
 .six .tree-node {
   width: 3.12%;
+}
+
+.six .node {
+  height: 100%;
 }
 
 .App {
